出発地と到着地を入力できるようにした

--- a/OriginalApri/Base.lproj/Main.storyboard
+++ b/OriginalApri/Base.lproj/Main.storyboard
@@ -1,24 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OriginalApri" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VjT-hy-7Vc">
+                                <rect key="frame" x="187" y="503" width="40" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="検索">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3L-xd-SB8">
+                                <rect key="frame" x="277" y="357" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SerchTableView テンプレート.png" translatesAutoresizingMaskIntoConstraints="NO" id="wrF-O6-wmS">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J2Z-c6-btR">
+                                <rect key="frame" x="222" y="252" width="110" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hor-qs-U2Y">
+                                <rect key="frame" x="222" y="344" width="110" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="wrF-O6-wmS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4dC-0P-pXN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p3L-xd-SB8" secondAttribute="bottom" constant="484" id="59F-mb-7Qz"/>
+                            <constraint firstItem="wrF-O6-wmS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-44" id="8Gh-bw-6JA"/>
+                            <constraint firstItem="p3L-xd-SB8" firstAttribute="bottom" secondItem="Hor-qs-U2Y" secondAttribute="bottom" id="Jzy-SZ-L4l"/>
+                            <constraint firstItem="VjT-hy-7Vc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="187" id="Thg-OL-CYa"/>
+                            <constraint firstItem="J2Z-c6-btR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="222" id="WqR-qd-CAp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J2Z-c6-btR" secondAttribute="trailing" constant="82" id="Zih-Hn-K8C"/>
+                            <constraint firstItem="VjT-hy-7Vc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b9y-Dq-dnN"/>
+                            <constraint firstItem="J2Z-c6-btR" firstAttribute="trailing" secondItem="Hor-qs-U2Y" secondAttribute="trailing" id="d3v-io-vK8"/>
+                            <constraint firstItem="p3L-xd-SB8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fGb-ff-s38"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VjT-hy-7Vc" secondAttribute="bottom" constant="323" id="g2k-Wg-7Rd"/>
+                            <constraint firstItem="wrF-O6-wmS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gga-Nv-Klb"/>
+                            <constraint firstItem="J2Z-c6-btR" firstAttribute="leading" secondItem="Hor-qs-U2Y" secondAttribute="leading" id="h0v-F0-zKX"/>
+                            <constraint firstItem="VjT-hy-7Vc" firstAttribute="centerX" secondItem="wrF-O6-wmS" secondAttribute="centerX" id="kal-TD-Hkd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p3L-xd-SB8" secondAttribute="trailing" constant="95" id="up1-Kx-eXl"/>
+                            <constraint firstItem="p3L-xd-SB8" firstAttribute="top" secondItem="J2Z-c6-btR" secondAttribute="bottom" constant="71" id="v9R-wx-tth"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="TextField1" destination="J2Z-c6-btR" id="slN-Yq-zWc"/>
+                        <outlet property="TextField2" destination="Hor-qs-U2Y" id="bQg-WJ-FGg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="28.985507246376812" y="75"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SerchTableView テンプレート.png" width="222" height="483"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
