--- a/OriginalApri/Base.lproj/Main.storyboard
+++ b/OriginalApri/Base.lproj/Main.storyboard
@@ -42,6 +42,13 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLH-rP-rC3">
+                                <rect key="frame" x="356" y="86" width="31" height="30"/>
+                                <state key="normal" title="設定"/>
+                                <connections>
+                                    <segue destination="R2r-Bt-aMr" kind="presentation" id="Xbe-1B-XEc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -50,6 +57,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p3L-xd-SB8" secondAttribute="bottom" constant="484" id="59F-mb-7Qz"/>
                             <constraint firstItem="wrF-O6-wmS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-44" id="8Gh-bw-6JA"/>
                             <constraint firstItem="p3L-xd-SB8" firstAttribute="bottom" secondItem="Hor-qs-U2Y" secondAttribute="bottom" id="Jzy-SZ-L4l"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bLH-rP-rC3" secondAttribute="trailing" constant="27" id="KNF-ys-SPf"/>
                             <constraint firstItem="VjT-hy-7Vc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="187" id="Thg-OL-CYa"/>
                             <constraint firstItem="J2Z-c6-btR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="222" id="WqR-qd-CAp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J2Z-c6-btR" secondAttribute="trailing" constant="82" id="Zih-Hn-K8C"/>
@@ -60,6 +68,8 @@
                             <constraint firstItem="wrF-O6-wmS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gga-Nv-Klb"/>
                             <constraint firstItem="J2Z-c6-btR" firstAttribute="leading" secondItem="Hor-qs-U2Y" secondAttribute="leading" id="h0v-F0-zKX"/>
                             <constraint firstItem="VjT-hy-7Vc" firstAttribute="centerX" secondItem="wrF-O6-wmS" secondAttribute="centerX" id="kal-TD-Hkd"/>
+                            <constraint firstItem="bLH-rP-rC3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kbf-MZ-c9I"/>
+                            <constraint firstItem="bLH-rP-rC3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="42" id="uGD-a4-Urj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p3L-xd-SB8" secondAttribute="trailing" constant="95" id="up1-Kx-eXl"/>
                             <constraint firstItem="p3L-xd-SB8" firstAttribute="top" secondItem="J2Z-c6-btR" secondAttribute="bottom" constant="71" id="v9R-wx-tth"/>
                         </constraints>
@@ -72,6 +82,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="75"/>
+        </scene>
+        <!--Setting View Controller-->
+        <scene sceneID="nvb-r6-cfp">
+            <objects>
+                <viewController id="K4p-g2-mDN" customClass="SettingViewController" customModule="OriginalApri" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jzK-LD-8kg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1QR-dn-Kwc">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="設定" id="IkI-Sg-JKw"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="s9z-eg-OlX">
+                                <rect key="frame" x="0.0" y="59" width="414" height="217"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SampleCell" id="hNp-e3-Z9g">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hNp-e3-Z9g" id="Zgd-6L-zla">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="K4p-g2-mDN" id="q1I-aP-2ef"/>
+                                    <outlet property="delegate" destination="K4p-g2-mDN" id="4i1-uR-IQa"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="X54-mX-qwz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="TableView" destination="s9z-eg-OlX" id="EFp-OE-sqX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pDg-3o-hQj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="943.47826086956525" y="75"/>
+        </scene>
+        <!--MapVC-->
+        <scene sceneID="9sa-z5-zHs">
+            <objects>
+                <viewController id="R2r-Bt-aMr" customClass="MapVC" customModule="OriginalApri" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y5Z-gi-z9m">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="anO-6c-UFl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AF9-tX-TFi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1758" y="75"/>
         </scene>
     </scenes>
     <resources>
